--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,7 @@
             pointer-events: auto;
         }
         #loading::before{
-            /* content: 'PORTFOLIO'; */
-            content: 'REACT';
+            content: 'PORTFOLIO';
             position: absolute;
             top: 50%;
             left: 50%;
