optimize & add curve plane

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
         }
     </script>
 
+    <!-- Loader Style -->
     <style>
         html,body{
             width: 100%;
@@ -141,7 +142,7 @@
             height: 100%;
         }
     </style>
-    <!-- END CSS -->
+
 </head>
 <body>
 
